<resources>
    <string name="com_001">OFF</string>
    <string name="com_002">ON</string>
    <string name="com_003">OK</string>
    <string name="com_004">Cancel </string>
    <string name="com_005">OK</string>
    <string name="com_006">Yes</string>
    <string name="com_007">No</string>
    <string name="com_008">Agree</string>
    <string name="com_009">On</string>
    <string name="com_010">Off</string>
    <string name="com_011">en-US</string>
    <string name="com_012">en_us</string>
    <string name="ply_001">%d Albums</string>
    <string name="ply_003">%fkHz</string>
    <string name="ply_004">%fMHz</string>
    <string name="ply_005">ALARM Interruption</string>
    <string name="ply_006">Album</string>
    <string name="ply_007">AM</string>
    <string name="ply_008">Artist</string>
    <string name="ply_012">BSM</string>
    <string name="ply_013">Favorites</string>
    <string name="ply_014">FM</string>
    <string name="ply_016">Genre</string>
    <string name="ply_017">LW</string>
    <string name="ply_018">MW</string>
    <string name="ply_019">NEWS Interruption</string>
    <string name="ply_020">No Album</string>
    <string name="ply_021">No Artist</string>
    <string name="ply_022">No Genre</string>
    <string name="ply_023">No Name</string>
    <string name="ply_024">No Title</string>
    <string name="ply_025">Playlists</string>
    <string name="ply_027">RDS Interruption</string>
    <string name="ply_030">SEEK</string>
    <string name="ply_031">SW</string>
    <string name="ply_032">SXM1</string>
    <string name="ply_033">SXM2</string>
    <string name="ply_034">SXM3</string>
    <string name="ply_035">TA Interruption</string>
    <string name="ply_036">Song</string>
    <string name="ply_037">TuneMix OFF</string>
    <string name="ply_038">TuneMix ON</string>
    <string name="ply_039">Now Playing</string>
    <string name="ply_040">Traffic Information</string>
    <string name="ply_041">PTY Search ．．．</string>
    <string name="ply_042">PTY Search</string>
    <string name="ply_043">News info</string>
    <string name="ply_044">Popular</string>
    <string name="ply_045">Classics</string>
    <string name="ply_046">Others</string>
    <string name="ply_047">Cancel </string>
    <string name="ply_048">FM1</string>
    <string name="ply_049">FM2</string>
    <string name="ply_050">FM3</string>
    <string name="ply_051">SW1</string>
    <string name="ply_052">SW2</string>
    <string name="ply_053">S.Todoroki</string>
    <string name="ply_054">P.CH</string>
    <string name="ply_055">AM1</string>
    <string name="ply_056">AM2</string>
    <string name="ply_057">No PTY</string>
    <string name="ply_058">BSM...</string>
    <string name="ply_059">x -40.0</string>
    <string name="ply_060">x -10.0</string>
    <string name="ply_061">x 1.0</string>
    <string name="ply_062">x 10.0</string>
    <string name="ply_063">x 40.0</string>
    <string name="ply_064">PAUSE</string>
    <string name="ply_065">P.CH UP</string>
    <string name="ply_066">P.CH DOWN</string>
    <string name="ply_067">MANUAL UP</string>
    <string name="ply_068">MANUAL DOWN</string>
    <string name="ply_069">SEEK</string>
    <string name="ply_070">CHANNEL UP</string>
    <string name="ply_071">CHANNEL DOWN</string>
    <string name="ply_072">SCAN UP</string>
    <string name="ply_073">SCAN DOWN</string>
    <string name="ply_074">FREQ. UP</string>
    <string name="ply_075">FREQ. DOWN</string>
    <string name="ply_076">Subscription Updated\nPress OK to Continue.</string>
    <string name="ply_077">Protect</string>
    <string name="ply_078">Skipped</string>
    <string name="ply_079">Unplayable File </string>
    <string name="ply_080">No USB Device</string>
    <string name="ply_081">USB Media</string>
    <string name="ply_082">&gt;</string>
    <string name="ply_083">No Resource</string>
    <string name="ply_084">List display is not supported</string>
    <string name="ply_085">HD</string>
    <string name="ply_086">LINKING</string>
    <string name="ply_087">Digital</string>
    <string name="ply_088">Analog</string>
    <string name="ply_089">No Signal</string>
    <string name="ply_090">No Station</string>
    <string name="ply_091">FM LINK</string>
    <string name="ply_092">DAB1</string>
    <string name="ply_093">DAB2</string>
    <string name="ply_094">DAB3</string>
    <string name="ply_095">PAUSE</string>
    <string name="ply_096">UPDATING LIST</string>
    <string name="ply_097">Station List</string>
    <string name="ply_098">List Update</string>
    <string name="ply_099">Antenna Error</string>
    <string name="ply_100">Station</string>
    <string name="ply_101">Program Type</string>
    <string name="ply_102">Station Group</string>
    <string name="ply_103">News/Info</string>
    <string name="ply_104">Popular</string>
    <string name="ply_105">Classics</string>
    <string name="ply_106">Others</string>
    <string name="ply_107">Not Found</string>
    <string name="set_001">31Band EQ</string>
    <string name="set_002">31Band EQ</string>
    <string name="set_003">Driving Support Eye</string>
    <string name="set_004">Add</string>
    <string name="set_005">Advanced Settings</string>
    <string name="set_006">AF</string>
    <string name="set_007">Alarm</string>
    <string name="set_008">Alarm Output</string>
    <string name="set_009">Alarm Volume</string>
    <string name="set_010">Album List Image</string>
    <string name="set_011">ALL</string>
    <string name="set_012">Always　On</string>
    <string name="set_013">AM STEP 9K/10K</string>
    <string name="set_014">App Auto Launch</string>
    <string name="set_015">App</string>
    <string name="set_016">Version</string>
    <string name="set_017">Screen</string>
    <string name="set_019">ATT/MUTE</string>
    <string name="set_020">Audio</string>
    <string name="set_021">Auto</string>
    <string name="set_022">Auto Pl</string>
    <string name="set_023">Auto Pairing</string>
    <string name="set_024">AUX</string>
    <string name="set_026">No Name</string>
    <string name="set_027">Dynamic Bass Enhancer </string>
    <string name="set_028">Beep Tone</string>
    <string name="set_030">Brightness</string>
    <string name="set_032">BT Audio</string>
    <string name="set_034">BT Device</string>
    <string name="set_035">Call to …</string>
    <string name="set_036">Camera Calibration</string>
    <string name="set_038">Safety</string>
    <string name="set_040">Standard</string>
    <string name="set_041">Contact Type</string>
    <string name="set_042">Contact to</string>
    <string name="set_043">Contact to</string>
    <string name="set_046">Custom</string>
    <string name="set_047">Custom1 Detail</string>
    <string name="set_048">Custom1 Simple</string>
    <string name="set_049">Custom Color</string>
    <string name="set_050">Custom2 Detail</string>
    <string name="set_051">Custom2 Simple</string>
    <string name="set_052">Cutoff</string>
    <string name="set_053">Delete</string>
    <string name="set_055">Device Information</string>
    <string name="set_058">Dimmer</string>
    <string name="set_059">Direct Call</string>
    <string name="set_060">DISP Brightness</string>
    <string name="set_061">DISP Color</string>
    <string name="set_062">Display Off</string>
    <string name="set_063">Distance Unit</string>
    <string name="set_067">Fader/Balance</string>
    <string name="set_085">Genre List Image</string>
    <string name="set_123">Load</string>
    <string name="set_125">Loudness</string>
    <string name="set_157">Playlist Image</string>
    <string name="set_189">Save</string>
    <string name="set_194">Short Cut Buttons</string>
    <string name="set_198">Sound Retriever</string>
    <string name="set_199">Source Level Adjuster</string>
    <string name="set_319">What\'s the weather?\nPlay my Flash Briefing\nHow tall is Mt. Everest?\nIs it going to rain today?</string>
    <string name="set_320">To learn more and access additional features, download the Amazon Alexa App.</string>
    <string name="set_339">・This feature only supports landscape display mode, please use the device on its side.\n・When using this feature, please secure your device with a proper cradle.\n・This feature uses your camera and location services settings to operate. Please be careful, as the feature will not work if the settings are turned OFF.\n・Depending on the device or the situation, the device can overheat and cause a forced shutdown. In some cases using the air-condition for cool air flow can alleviate this.\n・Please close out all other applications if you experience instability, as this feature requires a lot of memory. If this does not correct the issue, please restart the device. \n・Using all the features can significantly use up the battery. We recommend connecting to a charger or conserving battery life by lowering the backlight on your display.\n・Do not leave your device in the car in hot temperatures. To prevent any issues, refer to your device\'s user manual for proper operation.\n・Depending on the usage and environment, the device can heat up and automatically close out and stop working.\n・We assume no responsibility, if the device stops functioning due to any malfunction or model changes, even after the purchase of this feature.\n・We recommend you check to see if your device is supported before purchasing this feature.</string>
    <string name="set_343">[Caution when setting up]\n・Please secure the device with a proper cradle.\n・Secure the device where it does not obstruct your view when driving.\n・For accurate reading secure the device horizontally &amp; vertically.\n・Please do not set the device anywhere that would obstruct the airbag safety system.  Setting the device where it could interfere with the airbag system may cause it not to deploy or cause injury.\n\n[Device mounting position]\n・Should be placed as close to the center of the width of the vehicle as possible. </string>
    <string name="set_344">・Position the device on the dashboard where there are no reflections.</string>
    <string name="set_345">・Position the camera lens so that it points within the area of the wiper.\n\n[Adjusting the camera direction]\nAlways adjust the camera when attaching the device. \n・Adjust the device straight in the same direction of the vehicle.\n・Adjust the device both vertically and horizontally until the OK button is displayed in the center of the screen. \n\n[Setting the installation conditions]\n・Please set the height from the ground to the camera. \n・Please set the distance from the camera to the front end of the vehicle. \n・Please set the vehicle width. </string>
    <string name="set_346">[Display of operating status]\nDepending on the operating status, an icon is displayed\n・Functioning</string>
    <string name="set_347">・Detecting</string>
    <string name="set_348">・Error</string>
    <string name="set_349">※By touching the Error icon, you can check the error messages. \n\nIn case of a warning, a warning dialog is displayed. \n※The warning dialog will be displayed only on the screen on which the icon is displayed.</string>
    <string name="set_365">When detection is active, the type of detection is indicated on the display.\n\nEg. Vehicle detected from the front </string>
    <string name="set_366">・ Functions operated with a smartphone are merely tools available to the driver. \nThe driver shall observe safe and sensible driving behavior under all circumstances.</string>
    <string name="set_367">・Please be aware that depending on the position of the device or the driving conditions (weather, time of day, road conditions, etc.), shape and color of vehicles, under some conditions the feature may not function correctly. \n・We cannot assume any responsibility in any accident that occurred during the use of this feature.</string>
    <string name="set_393">Waiting for Automatic Connection</string>
    <string name="set_411">初めてみよう</string>
</resources>